--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,6 +44,30 @@
     "\n",
     "dfDay1['diff']=dfDay1.diff()\n",
     "dfDay1[dfDay1['diff']>0].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1103\n",
+       "diff    1103\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#puzzle 2\n",
+    "\n",
+    "dfDay1[dfDay1[0].rolling(3).sum().diff()>0].count()"
    ]
   }
  ],
