--- a/Day2/Day2.ipynb
+++ b/Day2/Day2.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,157 +60,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['forward', 'down', 'up'], dtype=object)"
+       "-2120749"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfPos['Dir'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dir</th>\n",
-       "      <th>Amt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>987</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>989</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>forward</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>417 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Dir  Amt\n",
-       "0    forward    7\n",
-       "1    forward    9\n",
-       "2    forward    3\n",
-       "5    forward    6\n",
-       "7    forward    2\n",
-       "..       ...  ...\n",
-       "987  forward    7\n",
-       "989  forward    1\n",
-       "995  forward    7\n",
-       "997  forward    6\n",
-       "999  forward    3\n",
-       "\n",
-       "[417 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfPos[ dfPos['Dir'] == 'forward']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  Try to use a loop for each direction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pd.read_clipboard(names=['Dir','Amt']).head(1) #this works too, but def bad form"
+    "sumFwd = dfPos[ dfPos['Dir'] == 'forward']['Amt'].sum()\n",
+    "sumDwn = -dfPos[ dfPos['Dir'] == 'down']['Amt'].sum()\n",
+    "sumUp = dfPos[ dfPos['Dir'] == 'up']['Amt'].sum()\n",
+    "\n",
+    "ans = sumFwd * (sumDwn + sumUp)\n",
+    "ans"
    ]
   }
  ],
